--- a/client/src/styles/mainscreenstyle.css
+++ b/client/src/styles/mainscreenstyle.css
@@ -152,7 +152,7 @@
 }
 #VisionStatement{
     position:absolute;
-    top:30%;
+    top:38%;
     text-align: center;
     font-size: var(--ReallyLarge);
     color:var(--MainColor);
