--- a/client/src/styles/secondscreenstyle.css
+++ b/client/src/styles/secondscreenstyle.css
@@ -11,11 +11,12 @@
     text-align: left;
     position: absolute;
     z-index: -1 ;
+    width: 50vw;
 }
 #leftOpenMenu h1{
     font-size: var(--SuperDupperLarge);
 }
-#leftOpenMenu input{
+#leftOpenMenu .inputing{
     /* width: 40vw; */
     height: 8vh;
     border-radius: 20px;
@@ -48,7 +49,7 @@
 }
 #rightOpenMenu{
     position: absolute;
-    width: 60%;
+    width: 50vw;
     margin-top: -47vh;
 }
 #leftSide{
@@ -91,7 +92,7 @@
     height: inherit;
     padding-top: 20vh;
     padding-left: 3vw;
-    width: 80vw;
+    width: 50vw;
     box-shadow: 10px 0px 11px rgb(0 0 0 / 0.1);
     z-index: 5;
     text-align: right;
